--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "lucide-react": "^0.399.0",
     "react": "^18.3.1",
+    "react-date-picker": "^11.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0"
   },
