--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "lucide-react": "^0.399.0",
     "react": "^18.3.1",
     "react-date-picker": "^11.0.0",
